--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -494,7 +494,7 @@
     "add_appliance_pair_failed": "Párování selhalo",
     "Super_cool": "Super Cool",
     "Fast_freeze": "Super Freeze",
-    "child_lock": "Child Lock (Dětský zámek)",
+    "child_lock": "Dětský zámek",
     "cooler": "Chladič",
     "freezer": "Mraznička",
     "program_name": "PROGRAM",
@@ -794,9 +794,9 @@
     "device_status_weight": "Vážení",
     "device_status_prewashing": "Předpírka",
     "device_status_washing": "Praní",
-    "device_status_rinsing": "Oplachování",
+    "device_status_rinsing": "Máchání",
     "device_status_soften": "Aviváž",
-    "device_status_spin": "Předení",
+    "device_status_spin": "Odstřeďování",
     "device_status_drying": "Sušení",
     "device_status_air": "Vzduch",
     "device_status_program_end": "Konec programu",
@@ -972,7 +972,7 @@
     "washer_atag_step_wash_way_quiet": "Tichý",
     "washer_atag_step_wash_way_powerful": "Silný",
     "finish": "DOKONČIT",
-    "setting_auto_child_lock": "Child Lock (Dětský zámek)",
+    "setting_auto_child_lock": "Dětský zámek",
     "setting_key_sound_level": "Úroveň zvuku kláves",
     "setting_key_sensitivity_level": "Úroveň citlivosti kláves",
     "setting_demo_mode": "Demo režim",
@@ -1898,7 +1898,7 @@
     "program_name_cotton_underwear": "Bavlněné spodní prádlo",
     "transfer_to_device": "Přenést do zařízení",
     "remote_control_is_disabled": "Dálkové ovládání je deaktivováno.",
-    "wash_finished": "Mytí je dokončeno",
+    "wash_finished": "Praní dokončeno",
     "wash_dry_tip": "Sušte prádlo se stejným nastavením, jaké jste použili v pračce.",
     "wash_dry_sync": "WashDry Sync",
     "gorenje_wash_dry_instruction": "S aktivovanou funkcí WashDry Sync se váš prací program po dokončení praní automaticky přenese do zvolené bubnové sušičky.",
@@ -4230,5 +4230,19 @@
     "p_check_email": "Zkontrolujte prosím svůj e-mail",
     "CL_CF_FM_storage_appliance": "Skladovací zařízení",
     "storage_appliance": "SKLADOVACÍ SPOTŘEBIČ",
-    "CL_CF_FM_quickly_select_food": "Rychle vyberte stávající potraviny v chladničce"
+    "CL_CF_FM_quickly_select_food": "Rychle vyberte stávající potraviny v chladničce",
+    "CL_CF_FM_add_selected_items_to_ref": "PŘIDEJTE VYBRANÉ POLOŽKY K REF",
+    "CL_CF_FM_skip_to_library": "PŘESKOČIT DO KNIHOVNY",
+    "sch_name": "JMÉNO PLÁNOVAČE",
+    "h_use_air_care": "Jak používat péči o vzduch",
+    "h_manage_room": "Jak spravovat svůj pokoj",
+    "h_select_preset_mode": "Jak vybrat přednastavený režim",
+    "CL_CF_CP_monday": "pondělí",
+    "CL_CF_CP_tuesday": "úterý",
+    "CL_CF_CP_wednesday": "středa",
+    "CL_CF_CP_thursday": "čtvrtek",
+    "CL_CF_CP_friday": "pátek",
+    "CL_CF_CP_saturday": "sobota",
+    "CL_CF_CP_sunday": "neděle",
+    "CL_DV_OV_delay_start_end_desc": "Program vaření můžete odložit nastavením preferovaného času začátku nebo konce. Jakmile si vyberete jeden, druhý se automaticky vypočítá."
 }
