--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -792,7 +792,7 @@
     "device_status_open": "Åben",
     "device_status_not_available": "Ikke tilgængelig",
     "device_status_weight": "Vejning",
-    "device_status_prewashing": "Forvasker",
+    "device_status_prewashing": "Forvask",
     "device_status_washing": "Vasker",
     "device_status_rinsing": "Skylning",
     "device_status_soften": "Blødgørende",
@@ -4230,5 +4230,19 @@
     "p_check_email": "Tjek venligst din e-mail",
     "CL_CF_FM_storage_appliance": "Opbevaringsapparat",
     "storage_appliance": "OPBEVARINGSAPPARAT",
-    "CL_CF_FM_quickly_select_food": "Vælg hurtigt eksisterende mad i køleskabet"
+    "CL_CF_FM_quickly_select_food": "Vælg hurtigt eksisterende mad i køleskabet",
+    "CL_CF_FM_add_selected_items_to_ref": "TILFØJ UDVALGTE VARER TIL REF",
+    "CL_CF_FM_skip_to_library": "SKIP TIL BIBLIOTEKET",
+    "sch_name": "PLANLAGER NAVN",
+    "h_use_air_care": "Sådan bruges luftpleje",
+    "h_manage_room": "Sådan administrerer du dit værelse",
+    "h_select_preset_mode": "Sådan vælges en forudindstillet tilstand",
+    "CL_CF_CP_monday": "mandag",
+    "CL_CF_CP_tuesday": "tirsdag",
+    "CL_CF_CP_wednesday": "onsdag",
+    "CL_CF_CP_thursday": "torsdag",
+    "CL_CF_CP_friday": "fredag",
+    "CL_CF_CP_saturday": "lørdag",
+    "CL_CF_CP_sunday": "søndag",
+    "CL_DV_OV_delay_start_end_desc": "Du kan forsinke dit madlavningsprogram ved at indstille enten dit foretrukne start- eller sluttidspunkt. Når du har valgt en, vil den anden automatisk blive beregnet."
 }
