--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4230,5 +4230,19 @@
     "p_check_email": "Ελέγξτε το email σας",
     "CL_CF_FM_storage_appliance": "Συσκευή αποθήκευσης",
     "storage_appliance": "ΣΥΣΚΕΥΗ ΑΠΟΘΗΚΕΥΣΗΣ",
-    "CL_CF_FM_quickly_select_food": "Επιλέξτε γρήγορα υπάρχοντα τρόφιμα στο ψυγείο"
+    "CL_CF_FM_quickly_select_food": "Επιλέξτε γρήγορα υπάρχοντα τρόφιμα στο ψυγείο",
+    "CL_CF_FM_add_selected_items_to_ref": "ΠΡΟΣΘΗΚΗ ΕΠΙΛΕΓΜΕΝΩΝ ΣΤΟΙΧΕΙΩΝ ΣΤΗΝ ΑΝΑΦ",
+    "CL_CF_FM_skip_to_library": "ΜΕΤΑΒΑΣΗ ΣΤΗ ΒΙΒΛΙΟΘΗΚΗ",
+    "sch_name": "ΟΝΟΜΑ ΠΡΟΓΡΑΜΜΑΤΙΣΤΗ",
+    "h_use_air_care": "Πώς να χρησιμοποιήσετε τη φροντίδα του αέρα",
+    "h_manage_room": "Πώς να διαχειριστείτε το δωμάτιό σας",
+    "h_select_preset_mode": "Πώς να επιλέξετε μια προκαθορισμένη λειτουργία",
+    "CL_CF_CP_monday": "Δευτέρα",
+    "CL_CF_CP_tuesday": "Τρίτη",
+    "CL_CF_CP_wednesday": "Τετάρτη",
+    "CL_CF_CP_thursday": "Πέμπτη",
+    "CL_CF_CP_friday": "Παρασκευή",
+    "CL_CF_CP_saturday": "Σάββατο",
+    "CL_CF_CP_sunday": "Κυριακή",
+    "CL_DV_OV_delay_start_end_desc": "Μπορείτε να καθυστερήσετε το πρόγραμμα μαγειρέματος ρυθμίζοντας είτε την προτιμώμενη ώρα έναρξης είτε λήξης. Αφού επιλέξετε το ένα, το άλλο θα υπολογιστεί αυτόματα."
 }
