--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -972,7 +972,7 @@
     "washer_atag_step_wash_way_quiet": "Tranquillo",
     "washer_atag_step_wash_way_powerful": "Potente",
     "finish": "FINE",
-    "setting_auto_child_lock": "Blocco per bambini",
+    "setting_auto_child_lock": "Blocco per Bambini",
     "setting_key_sound_level": "Livello sonoro chiave",
     "setting_key_sensitivity_level": "Livello di sensibilità chiave",
     "setting_demo_mode": "Modalità demo",
@@ -4230,5 +4230,19 @@
     "p_check_email": "Per favore controlla la tua email",
     "CL_CF_FM_storage_appliance": "Dispositivo di archiviazione",
     "storage_appliance": "APPARECCHIO DI CONSERVAZIONE",
-    "CL_CF_FM_quickly_select_food": "Seleziona rapidamente gli alimenti presenti nel frigorifero"
+    "CL_CF_FM_quickly_select_food": "Seleziona rapidamente gli alimenti presenti nel frigorifero",
+    "CL_CF_FM_add_selected_items_to_ref": "AGGIUNGI ARTICOLI SELEZIONATI AL RIFERIMENTO",
+    "CL_CF_FM_skip_to_library": "VAI ALLA BIBLIOTECA",
+    "sch_name": "NOME DEL PROGRAMMATORE",
+    "h_use_air_care": "Come usare la cura dell'aria",
+    "h_manage_room": "Come gestire la tua camera",
+    "h_select_preset_mode": "Come selezionare una modalità preimpostata",
+    "CL_CF_CP_monday": "Lunedi",
+    "CL_CF_CP_tuesday": "Martedì",
+    "CL_CF_CP_wednesday": "Mercoledì",
+    "CL_CF_CP_thursday": "Giovedì",
+    "CL_CF_CP_friday": "Venerdì",
+    "CL_CF_CP_saturday": "Sabato",
+    "CL_CF_CP_sunday": "Domenica",
+    "CL_DV_OV_delay_start_end_desc": "Puoi ritardare il tuo programma di cottura impostando l'orario di inizio o di fine che preferisci. Una volta scelto uno, l'altro verrà calcolato automaticamente."
 }
