--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -47,7 +47,7 @@
     "setting_brief_summary": "Kort sammendrag av problemet",
     "setting_user_profile": "Brukerprofil",
     "setting_notifications_title": "Varsler",
-    "off": "På",
+    "off": "Av",
     "setting_about_connect": "Om ConnectLife",
     "setting_language": "SPRÅK",
     "setting_date_format": "DATOFORMAT",
@@ -4230,5 +4230,19 @@
     "p_check_email": "Vennligst sjekk e-posten din",
     "CL_CF_FM_storage_appliance": "Oppbevaringsapparat",
     "storage_appliance": "OPPBEVARINGSAPPARAT",
-    "CL_CF_FM_quickly_select_food": "Velg raskt eksisterende mat i kjøleskapet"
+    "CL_CF_FM_quickly_select_food": "Velg raskt eksisterende mat i kjøleskapet",
+    "CL_CF_FM_add_selected_items_to_ref": "LEGG TIL UTVALGTE ELEMENTER TIL REF",
+    "CL_CF_FM_skip_to_library": "HOPPE TIL BIBLIOTEKET",
+    "sch_name": "PLANLEGGERS NAVN",
+    "h_use_air_care": "Hvordan bruke luftpleie?",
+    "h_manage_room": "Hvordan administrere rommet ditt?",
+    "h_select_preset_mode": "Hvordan velge en forhåndsinnstilt modus?",
+    "CL_CF_CP_monday": "mandag",
+    "CL_CF_CP_tuesday": "tirsdag",
+    "CL_CF_CP_wednesday": "onsdag",
+    "CL_CF_CP_thursday": "torsdag",
+    "CL_CF_CP_friday": "fredag",
+    "CL_CF_CP_saturday": "lørdag",
+    "CL_CF_CP_sunday": "søndag",
+    "CL_DV_OV_delay_start_end_desc": "Du kan forsinke tilberedningsprogrammet ved å angi enten ønsket start- eller sluttid. Når du har valgt en, vil den andre automatisk beregnes."
 }
