--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -972,7 +972,7 @@
     "washer_atag_step_wash_way_quiet": "Тихий",
     "washer_atag_step_wash_way_powerful": "Интенсивный",
     "finish": "ЗАВЕРШИТЬ",
-    "setting_auto_child_lock": "Блокировка от детей",
+    "setting_auto_child_lock": "Блокировка",
     "setting_key_sound_level": "Громкость нажатий",
     "setting_key_sensitivity_level": "Чувствительность клавиш",
     "setting_demo_mode": "Деморежим",
@@ -4230,5 +4230,19 @@
     "p_check_email": "Пожалуйста, проверьте свою электронную почту.",
     "CL_CF_FM_storage_appliance": "Устройство для хранения",
     "storage_appliance": "УСТРОЙСТВО ДЛЯ ХРАНЕНИЯ",
-    "CL_CF_FM_quickly_select_food": "Быстро выберите имеющуюся еду в холодильнике"
+    "CL_CF_FM_quickly_select_food": "Быстро выберите имеющуюся еду в холодильнике",
+    "CL_CF_FM_add_selected_items_to_ref": "ДОБАВИТЬ ВЫБРАННЫЕ ЭЛЕМЕНТЫ В ССЫЛКУ",
+    "CL_CF_FM_skip_to_library": "ПЕРЕЙТИ В БИБЛИОТЕКУ",
+    "sch_name": "ИМЯ ПЛАНИРОВЩИКА",
+    "h_use_air_care": "Как использовать уход за воздухом",
+    "h_manage_room": "Как управлять своей комнатой",
+    "h_select_preset_mode": "Как выбрать предустановленный режим",
+    "CL_CF_CP_monday": "Понедельник",
+    "CL_CF_CP_tuesday": "Вторник",
+    "CL_CF_CP_wednesday": "Среда",
+    "CL_CF_CP_thursday": "Четверг",
+    "CL_CF_CP_friday": "Пятница",
+    "CL_CF_CP_saturday": "Суббота",
+    "CL_CF_CP_sunday": "Воскресенье",
+    "CL_DV_OV_delay_start_end_desc": "Вы можете отложить программу приготовления пищи, установив желаемое время начала или окончания. После того, как вы выбрали одно, другое будет рассчитано автоматически."
 }
