--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -972,7 +972,7 @@
     "washer_atag_step_wash_way_quiet": "Tichý",
     "washer_atag_step_wash_way_powerful": "Výkonný",
     "finish": "DOKONČIŤ",
-    "setting_auto_child_lock": "Child Lock (Detský zámok)",
+    "setting_auto_child_lock": "Detský zámok",
     "setting_key_sound_level": "Úroveň zvuku tlačidiel",
     "setting_key_sensitivity_level": "Úroveň citlivosti kľúča",
     "setting_demo_mode": "Demo režim",
@@ -4230,5 +4230,19 @@
     "p_check_email": "Skontrolujte svoj e-mail",
     "CL_CF_FM_storage_appliance": "Úložné zariadenie",
     "storage_appliance": "SKLADOVACIE ZARIADENIE",
-    "CL_CF_FM_quickly_select_food": "Rýchlo vyberte existujúce potraviny v chladničke"
+    "CL_CF_FM_quickly_select_food": "Rýchlo vyberte existujúce potraviny v chladničke",
+    "CL_CF_FM_add_selected_items_to_ref": "PRIDAJTE VYBRANÉ POLOŽKY K REF",
+    "CL_CF_FM_skip_to_library": "PRESKOČIŤ DO KNIŽNICE",
+    "sch_name": "NÁZOV PLÁNOVAČA",
+    "h_use_air_care": "Ako používať starostlivosť o vzduch",
+    "h_manage_room": "Ako spravovať izbu",
+    "h_select_preset_mode": "Ako zvoliť prednastavený režim",
+    "CL_CF_CP_monday": "pondelok",
+    "CL_CF_CP_tuesday": "utorok",
+    "CL_CF_CP_wednesday": "streda",
+    "CL_CF_CP_thursday": "štvrtok",
+    "CL_CF_CP_friday": "piatok",
+    "CL_CF_CP_saturday": "sobota",
+    "CL_CF_CP_sunday": "nedeľu",
+    "CL_DV_OV_delay_start_end_desc": "Program varenia môžete odložiť nastavením preferovaného času začiatku alebo konca. Po výbere jedného sa automaticky vypočíta druhý."
 }
