--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4230,5 +4230,19 @@
     "p_check_email": "Электрондық поштаңызды тексеріңіз",
     "CL_CF_FM_storage_appliance": "Сақтау құрылғысы",
     "storage_appliance": "САҚТАУ ҚҰРЫЛЫ",
-    "CL_CF_FM_quickly_select_food": "Тоңазытқышта бар тағамды жылдам таңдаңыз"
+    "CL_CF_FM_quickly_select_food": "Тоңазытқышта бар тағамды жылдам таңдаңыз",
+    "CL_CF_FM_add_selected_items_to_ref": "ТАҢДАлған элементтерді REF",
+    "CL_CF_FM_skip_to_library": "КІТАПХАНАҒА ӨТУ",
+    "sch_name": "ЖОСПАРЛАУШЫ АТЫ",
+    "h_use_air_care": "Ауа күтімін қалай қолдануға болады?",
+    "h_manage_room": "Бөлмені қалай басқаруға болады?",
+    "h_select_preset_mode": "Алдын ала орнатылған режимді қалай таңдауға болады?",
+    "CL_CF_CP_monday": "дүйсенбі",
+    "CL_CF_CP_tuesday": "сейсенбі",
+    "CL_CF_CP_wednesday": "сәрсенбі",
+    "CL_CF_CP_thursday": "бейсенбі",
+    "CL_CF_CP_friday": "жұма",
+    "CL_CF_CP_saturday": "сенбі",
+    "CL_CF_CP_sunday": "жексенбі",
+    "CL_DV_OV_delay_start_end_desc": "Таңдаулы басталу немесе аяқталу уақытын орнату арқылы пісіру бағдарламасын кейінге қалдыра аласыз. Біреуін таңдағаннан кейін екіншісі автоматты түрде есептеледі."
 }
