--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4230,5 +4230,19 @@
     "p_check_email": "이메일을 확인해 주세요",
     "CL_CF_FM_storage_appliance": "저장 장치",
     "storage_appliance": "저장 기기",
-    "CL_CF_FM_quickly_select_food": "냉장고에 있는 기존 식품을 빠르게 선택하세요"
+    "CL_CF_FM_quickly_select_food": "냉장고에 있는 기존 식품을 빠르게 선택하세요",
+    "CL_CF_FM_add_selected_items_to_ref": "선택한 항목을 참조에 추가",
+    "CL_CF_FM_skip_to_library": "라이브러리로 건너뛰기",
+    "sch_name": "스케줄러 이름",
+    "h_use_air_care": "에어 케어 사용 방법",
+    "h_manage_room": "객실 관리 방법",
+    "h_select_preset_mode": "프리셋 모드를 선택하는 방법",
+    "CL_CF_CP_monday": "월요일",
+    "CL_CF_CP_tuesday": "화요일",
+    "CL_CF_CP_wednesday": "수요일",
+    "CL_CF_CP_thursday": "목요일",
+    "CL_CF_CP_friday": "금요일",
+    "CL_CF_CP_saturday": "토요일",
+    "CL_CF_CP_sunday": "일요일",
+    "CL_DV_OV_delay_start_end_desc": "선호하는 시작 시간이나 종료 시간을 설정하여 요리 프로그램을 지연할 수 있습니다. 하나를 선택하면 다른 하나가 자동으로 계산됩니다."
 }
