--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4230,5 +4230,19 @@
     "p_check_email": "กรุณาตรวจสอบอีเมล์ของคุณ",
     "CL_CF_FM_storage_appliance": "อุปกรณ์จัดเก็บ",
     "storage_appliance": "อุปกรณ์จัดเก็บ",
-    "CL_CF_FM_quickly_select_food": "เลือกอาหารที่มีอยู่ในตู้เย็นได้อย่างรวดเร็ว"
+    "CL_CF_FM_quickly_select_food": "เลือกอาหารที่มีอยู่ในตู้เย็นได้อย่างรวดเร็ว",
+    "CL_CF_FM_add_selected_items_to_ref": "เพิ่มรายการที่เลือกไปยังการอ้างอิง",
+    "CL_CF_FM_skip_to_library": "ข้ามไปที่ห้องสมุด",
+    "sch_name": "ชื่อผู้จัดตารางงาน",
+    "h_use_air_care": "วิธีใช้แอร์แคร์?",
+    "h_manage_room": "จะจัดการห้องของคุณอย่างไร?",
+    "h_select_preset_mode": "จะเลือกโหมดที่ตั้งไว้ล่วงหน้าได้อย่างไร?",
+    "CL_CF_CP_monday": "วันจันทร์",
+    "CL_CF_CP_tuesday": "วันอังคาร",
+    "CL_CF_CP_wednesday": "วันพุธ",
+    "CL_CF_CP_thursday": "วันพฤหัสบดี",
+    "CL_CF_CP_friday": "วันศุกร์",
+    "CL_CF_CP_saturday": "วันเสาร์",
+    "CL_CF_CP_sunday": "วันอาทิตย์",
+    "CL_DV_OV_delay_start_end_desc": "คุณสามารถเลื่อนโปรแกรมการปรุงอาหารได้โดยตั้งเวลาเริ่มต้นหรือสิ้นสุดที่ต้องการ เมื่อเลือกเวลาหนึ่งแล้ว ระบบจะคำนวณเวลาที่เหลือให้โดยอัตโนมัติ"
 }
