--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4230,5 +4230,19 @@
     "p_check_email": "Lütfen e-postanızı kontrol edin",
     "CL_CF_FM_storage_appliance": "Depolama Cihazı",
     "storage_appliance": "DEPOLAMA CİHAZI",
-    "CL_CF_FM_quickly_select_food": "Buzdolabında bulunan yiyecekleri hızlıca seçin"
+    "CL_CF_FM_quickly_select_food": "Buzdolabında bulunan yiyecekleri hızlıca seçin",
+    "CL_CF_FM_add_selected_items_to_ref": "SEÇİLEN ÖĞELERİ REFERANS'A EKLEYİN",
+    "CL_CF_FM_skip_to_library": "KÜTÜPHANEYE GİT",
+    "sch_name": "PROGRAMLAYICI ADI",
+    "h_use_air_care": "Hava bakımı nasıl kullanılır",
+    "h_manage_room": "Odanızı nasıl yönetirsiniz?",
+    "h_select_preset_mode": "Ön ayar modu nasıl seçilir",
+    "CL_CF_CP_monday": "Pazartesi",
+    "CL_CF_CP_tuesday": "Salı",
+    "CL_CF_CP_wednesday": "Çarşamba",
+    "CL_CF_CP_thursday": "Perşembe",
+    "CL_CF_CP_friday": "Cuma",
+    "CL_CF_CP_saturday": "Cumartesi",
+    "CL_CF_CP_sunday": "Pazar",
+    "CL_DV_OV_delay_start_end_desc": "Tercih ettiğiniz başlangıç veya bitiş saatini ayarlayarak pişirme programınızı geciktirebilirsiniz. Birini seçtiğinizde, diğeri otomatik olarak hesaplanacaktır."
 }
